Stop default body color  from making text unreadable

--- a/applications/storybook/src/app/index.scss
+++ b/applications/storybook/src/app/index.scss
@@ -14,4 +14,5 @@
 
 body {
   overflow: scroll !important;
+  color: inherit;
 }
